Fixed engine header definitions.

--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -480,17 +480,15 @@ The language chosen for this project was C++ 23.  There were two main reasons
 why this specific programming language was chosen. Firstly, it's the language
 that I have the most experience with which will significantly help during the
 implementation stages of the project. Secondly, the \gls{stl}  was one of the
-key reasons as to why C++ will be used. It provides many prebuilt data
-structures, containers and algorithms including ``std::vector'', ``std::string''
-and ``std::find'' to name a few. Furthermore, it saves time as I would not have
-to implement a custom solution in the limited time frame.
-
-Other language features that solidified by choice include, function overloading,
-templates, compile-time expressions, direct memory access and generally faster
-performance compared to higher-level languages such as Python and Javascript.
+key reasons why C++ will be used. It provides many prebuilt data structures,
+containers and algorithms including ``std::vector'', ``std::string'' and
+``std::find'' to name a few. Furthermore, it saves time as I would not have to
+implement a custom solution in the limited time frame. Other language features
+that solidified by choice include, function overloading, templates, compile-time
+expressions, direct memory access and generally faster performance compared to
+higher-level languages such as Python and Javascript.
 
 \subsection{Rendering API} \label{rendering_api}
-
 A rendering \gls{api} is a set of instructions that acts as an intermediary and
 allows for an application to make use of a systems \gls{gpu}. There are several
 different rendering \glspl{api} that exist including OpenGL, \gls{vulkan},
